--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,11 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="de.tilosp.robotremote.MainActivity">
+    <item android:id="@+id/action_connect"
+          android:title="@string/action_connect"
+          android:icon="@drawable/ic_action_connect"
+          android:orderInCategory="100"
+          app:showAsAction="ifRoom"/>
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
