--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         tools:context="de.tilosp.robotremote.DeviceListActivity">
 
     <LinearLayout
@@ -12,7 +12,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" android:id="@+id/linearLayout">
+            android:layout_centerHorizontal="true"
+            android:id="@+id/linearLayout">
         <Button
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -42,8 +43,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:text="@string/title_paired_devices"
                 android:textColor="#FFF"
         />
@@ -60,8 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:text="@string/title_other_devices"
                 android:textColor="#FFF"
                 android:visibility="gone"
