--- a/app/src/main/res/layout/device_name.xml
+++ b/app/src/main/res/layout/device_name.xml
@@ -2,6 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:padding="5dp"
+          android:paddingLeft="10dp"
+          android:paddingRight="10dp"
+          android:paddingTop="8dp"
+          android:paddingBottom="8dp"
           android:textSize="18sp"
 />
