--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -31,48 +31,58 @@
                 android:layout_gravity="bottom"
                 android:background="?android:attr/selectableItemBackground"/>
     </LinearLayout>
-    <LinearLayout
-            android:orientation="vertical"
+    <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/scrollView"
+            android:layout_above="@+id/linearLayout"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_above="@+id/linearLayout">
-        <TextView
-                android:id="@+id/title_paired_devices"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+        <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:text="@string/title_paired_devices"
-                android:textColor="#FFF"
-        />
+                android:layout_height="wrap_content">
+            <TextView
+                    android:id="@+id/title_paired_devices"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:text="@string/title_paired_devices"
+                    android:textColor="#FFF"
+            />
 
-        <ListView
-                android:id="@+id/paired_devices"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:stackFromBottom="true"
-        />
+            <LinearLayout
+                    android:id="@+id/paired_devices"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:stackFromBottom="true"
+                    android:orientation="vertical"
+            />
 
-        <TextView
-                android:id="@+id/title_new_devices"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:text="@string/title_other_devices"
-                android:textColor="#FFF"
-                android:visibility="gone"
-        />
+            <TextView
+                    android:id="@+id/title_new_devices"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:text="@string/title_other_devices"
+                    android:textColor="#FFF"
+                    android:visibility="gone"
+            />
 
-        <ListView
-                android:id="@+id/new_devices"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:stackFromBottom="true"
-        />
-    </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/new_devices"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:stackFromBottom="true"
+                    android:orientation="vertical"
+            />
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
