--- a/app/src/main/res/layout/device_name.xml
+++ b/app/src/main/res/layout/device_name.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:paddingLeft="10dp"
-          android:paddingRight="10dp"
-          android:paddingTop="8dp"
-          android:paddingBottom="8dp"
-          android:textSize="18sp"
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textSize="16sp"
+        android:gravity="start"
+        android:background="?android:attr/selectableItemBackground"
+        android:textAllCaps="false"
+        android:textStyle="normal"
 />
